@@ -1,0 +1,3 @@
+type 'a r = 'a constraint 'a = < w : int -> int; .. >
+class type virtual ct = object method virtual w : int -> int end
+
